added frontend output and help

--- a/changelog.html
+++ b/changelog.html
@@ -1,4 +1,5 @@
 <h3>Version 0.10</h3>
 <ul>
     <li>Made a ListItExtended field definition out of it.</li>
+    <li>No upgrade from previous versions possible - sorry for that!</li>
 </ul>
