upgrade routine, changelog and bumped version

--- a/changelog.html
+++ b/changelog.html
@@ -1,3 +1,8 @@
+<h3>Version 0.10.1</h3>
+<ul>
+    <li>Multilingual front-end</li>
+    <li>Bugfixes</li>
+</ul>
 <h3>Version 0.10</h3>
 <ul>
     <li>Made a ListItExtended field definition out of it.</li>
