--- a/changelog.html
+++ b/changelog.html
@@ -1,3 +1,8 @@
+<h3>Version 0.10.2</h3>
+<ul>
+    <li>Take advantage of ListIt's design to handle multi-values in multiple datasets</li>
+    <li>Bugfixes</li>
+</ul>
 <h3>Version 0.10.1</h3>
 <ul>
     <li>Multilingual front-end</li>
